--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -9,6 +9,14 @@ $btn-bg: #261000;
 $btn-bg--2: #200e01;
 $btn-bg--3: #2c1300;
 
-$heading-bg: #191313;;
+$heading-bg: #191313;
 $heading-bg--2: #171113;
 $heading-bg--3: #110b0d;
+
+$item-bg: #12090a;
+$item-bg--2: #110809;
+$item-bg--3: #0f0809;
+
+$character: #caa271;
+$character-name: darken(#fff, 10%);
+$character-label: $character-name;
