--- a/src/scss/widget/btn.scss
+++ b/src/scss/widget/btn.scss
@@ -19,6 +19,7 @@
     font-weight: 600;
     letter-spacing: .04em;
     text-decoration: none;
+    cursor: pointer;
 
     color: color.$btn-font;
     background: repeating-radial-gradient(
