--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -1,5 +1,9 @@
 $bg: #090504;
 $font: #f9e7c1;
+$error-bg: #300006;
+$error-font: #c20538;
+$error-border: #980224;
+
 $border: #835c44;
 $border-light-h: #9b6352;
 $border-light-v: #d0a67e;
