styling FIXes - narrow displays - disabled btns

--- a/src/components/Character/Character.scss
+++ b/src/components/Character/Character.scss
@@ -90,4 +90,12 @@ $grid-padding-v: 10px;
             }
         }
     }
+
+    .EquipmentList
+    {
+        @media (min-width: conf.$breakpoint-mobile-big)
+        {
+            justify-items: start;
+        }
+    }
 }
