--- a/src/components/Character/Character.scss
+++ b/src/components/Character/Character.scss
@@ -89,6 +89,23 @@ $grid-padding-v: 10px;
                 padding: $grid-padding-v $grid-padding-v 0;
             }
         }
+
+        .char-calc
+        {
+            font-size: 60%;
+            font-weight: normal;
+            margin-left: .5em;
+
+            &::before
+            {
+                content: "(";
+            }
+
+            &::after
+            {
+                content: ")";
+            }
+        }
     }
 
     .EquipmentList
